--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "styled-components": "^5.3.0"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
