--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "orbitchat",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://dm0lz.github.io/orbitchat/",
+  "homepage": "https://dm0lz.github.io/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
